# SeregaBackend

./: CMakeLists.txt  README.md
include/Controllers/: AuthController.hpp  ChatsController.hpp  LoginController.hpp  UpdatesController.hpp  UsersController.hpp
include/Filters/: JwtFilter.hpp
include/Models/: Messages.hpp  Updates.hpp  UserKeys.hpp  Users.hpp
include/Utils/: JwtUtils.hpp
sql/: create_tables.sql  hash_trigger.sql
src/Controllers/: AuthController.cpp  ChatsController.cpp  LoginController.cpp  UpdatesController.cpp  UsersController.cpp
src/Filters/: JwtFilter.cpp
src/Models/: Messages.cpp  Updates.cpp  UserKeys.cpp  Users.cpp
static/: swagger.json
